--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -899,6 +899,6 @@
     <string name="set_img_front">Set Image as Front</string>
     <string name="report_img">Report Image</string>
     <string name="detected_ingredients">Detected Ingredients</string>
-    <string name="set_image_name">"Successfully set the image as "</string>
+    <string name="set_image_name">Successfully set the image as</string>
     <!-- Used for diets AddOn -->
 </resources>
